--- a/assets/ws-chat.html
+++ b/assets/ws-chat.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- 添加视口元标签 -->
         <title>WebSocket Chat Example</title>
         <script type="text/javascript">
             window.onload = function () {
                 var conn;
                 var msg = document.getElementById("msg");
-                var log = document.getElementById("log");
+                var messages = document.getElementById("messages");
 
                 function appendLog(item) {
                     var doScroll =
-                        log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-                    log.appendChild(item);
+                        messages.scrollTop >
+                            messages.scrollHeight - messages.clientHeight - 1;
+                    messages.appendChild(item);
                     if (doScroll) {
-                        log.scrollTop = log.scrollHeight - log.clientHeight;
+                        messages.scrollTop = messages.scrollHeight -
+                            messages.clientHeight;
                     }
                 }
 
-                document.getElementById("form").onsubmit = function () {
+                document.getElementById("send").onclick = function () {
                     if (!conn) {
                         return false;
                     }
@@ -37,67 +42,89 @@
                         ws_protocol + document.location.host + "/websocket/chat",
                     );
                     conn.onclose = function (evt) {
-                        var item = document.createElement("div");
+                        var item = document.createElement("li");
                         item.innerHTML = "<b>Connection closed.</b>";
                         appendLog(item);
                     };
                     conn.onmessage = function (evt) {
                         var messages = evt.data.split("\n");
                         for (var i = 0; i < messages.length; i++) {
-                            var item = document.createElement("div");
+                            var item = document.createElement("li");
                             item.innerText = messages[i];
                             appendLog(item);
                         }
                     };
                 } else {
-                    var item = document.createElement("div");
+                    var item = document.createElement("li");
                     item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
                     appendLog(item);
                 }
             };
         </script>
-        <style type="text/css">
-            html {
-                overflow: hidden;
-            }
-
+        <style>
             body {
-                overflow: hidden;
-                padding: 0;
                 margin: 0;
-                width: 100%;
-                height: 100%;
-                background: gray;
-            }
-
-            #log {
-                background: white;
-                margin: 0;
-                padding: 0.5em 0.5em 0.5em 0.5em;
-                position: absolute;
-                top: 0.5em;
-                left: 0.5em;
-                right: 0.5em;
-                bottom: 3em;
-                overflow: auto;
+                padding-bottom: 3rem;
+                font-family:
+                    -apple-system,
+                    BlinkMacSystemFont,
+                    "Segoe UI",
+                    Roboto,
+                    Helvetica,
+                    Arial,
+                    sans-serif;
             }
 
             #form {
-                padding: 0 0.5em 0 0.5em;
+                background: rgba(0, 0, 0, 0.15);
+                padding: 0.25rem;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                display: flex;
+                height: 3rem;
+                box-sizing: border-box;
+                backdrop-filter: blur(10px);
+            }
+            #msg {
+                border: none;
+                padding: 0 1rem;
+                flex-grow: 1;
+                border-radius: 2rem;
+                margin: 0.25rem;
+            }
+            #input:focus {
+                outline: none;
+            }
+            #form > button {
+                background: #333;
+                border: none;
+                padding: 0 1rem;
+                margin: 0.25rem;
+                border-radius: 3px;
+                outline: none;
+                color: #fff;
+            }
+
+            #messages {
+                list-style-type: none;
                 margin: 0;
-                position: absolute;
-                bottom: 1em;
-                left: 0px;
-                width: 100%;
-                overflow: hidden;
+                padding: 0;
+            }
+            #messages > li {
+                padding: 0.5rem 1rem;
+            }
+            #messages > li:nth-child(odd) {
+                background: #efefef;
             }
         </style>
     </head>
     <body>
-        <div id="log"></div>
+        <ul id="messages"></ul>
         <form id="form">
-            <input type="submit" value="Send" />
-            <input type="text" id="msg" size="64" autofocus />
+            <input type="text" id="msg" autocomplete="off" autofocus />
+            <button type="button" id="send">Send</button>
         </form>
     </body>
 </html>
