--- a/assets/utf8.html
+++ b/assets/utf8.html
@@ -1,9 +1,13 @@
 <h1>Unicode Demo</h1>
 
-<p>Taken from <a
-href="http://www.cl.cam.ac.uk/~mgk25/ucs/examples/UTF-8-demo.txt">http://www.cl.cam.ac.uk/~mgk25/ucs/examples/UTF-8-demo.txt</a></p>
+<p>
+  Taken from <a
+    href="http://www.cl.cam.ac.uk/~mgk25/ucs/examples/UTF-8-demo.txt"
+  >http://www.cl.cam.ac.uk/~mgk25/ucs/examples/UTF-8-demo.txt</a>
+</p>
 
-<pre>
+<pre
+>
 
 UTF-8 encoded sample plain-text file
 ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
@@ -217,4 +221,5 @@ Box drawing alignment tests:                                          █
   ╚══╩══╝  └──┴──┘  ╰──┴──╯  ╰──┴──╯  ┗━━┻━━┛  ▗▄▖▛▀▜   └╌╌┘ ╎ ┗╍╍┛ ┋  ▁▂▃▄▅▆▇█
                                                ▝▀▘▙▄▟
 
-</pre>
+</pre
+>
